[metadata]
name = rtt_console
version = attr: rtt_console.version.VERSION
author = Viacheslav
author_email = viacheslav@mcublog.xyz
description = Simple Segger RTT console.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Mcublog/rtt-console
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.10
install_requires =
    pylink-square == 0.13.0
    prompt_toolkit == 3.0.29
    colorama == 0.4.4

[options.entry_points]
console_scripts =
    rtt-console = rtt_console.console:main

[options.packages.find]
where = src